# FreezeRay

./: .gitignore  CMakeLists.txt  README.md
include/: example_scene.hpp
include/freezeray/: fr_bsdf.hpp  fr_bxdf.hpp  fr_camera.hpp  fr_distribution.hpp  fr_fresnel.hpp  fr_globals.hpp  fr_image.hpp  fr_light.hpp  fr_material.hpp  fr_mesh.hpp  fr_microfacet_distribution.hpp  fr_object.hpp  fr_prng.hpp  fr_ray.hpp  fr_raycast_info.hpp  fr_renderer.hpp  fr_scene.hpp  fr_texture.hpp  quickmath.hpp  quickobj.h
include/freezeray/bxdf/: fr_brdf_lambertian.hpp  fr_brdf_lambertian_diffuse.hpp  fr_brdf_microfacet.hpp  fr_brdf_specular.hpp  fr_btdf_lambertian.hpp  fr_btdf_microfacet.hpp  fr_btdf_passthrough.hpp  fr_btdf_specular.hpp
include/freezeray/light/: fr_light_area.hpp  (+4 more)
include/rurt/: bxdf.hpp  constants.hpp  fresnel.hpp  globals.hpp  light.hpp  material.hpp  material_single_brdf.hpp  material_single_bxdf.hpp  mesh.hpp  microfacet_distribution.hpp  object.hpp  quickmath.hpp  ray.hpp  raycast_info.hpp  renderer.hpp  scene.hpp  texture.hpp
src/: main.cpp
src/example_scenes/: cornell_box.cpp  material_demo.cpp  san_miguel.cpp  sponza.cpp
src/freezeray/: fr_bsdf.cpp  fr_camera.cpp  fr_material.cpp  fr_mesh.cpp  fr_object.cpp  fr_prng.cpp  fr_renderer.cpp  fr_scene.cpp  fr_thread_pool.hpp
src/rurt/: brdf.hpp  brdf_lambertian_diffuse.cpp  brdf_lambertian_diffuse.hpp  camera.cpp  camera.hpp  constants.hpp  intersection_info.hpp  material.cpp  material.hpp  mesh.cpp  mesh.hpp  object.cpp  object.hpp  quickobj.h  ray.hpp  renderer.cpp  renderer.hpp  scene.cpp  scene.hpp
(+114 files in other folders)
